<resources>
    <string name="app_name">MyApplication</string>
    <string name="welcome">Welcome!</string>
    <string name="sign_in_to_cont">Sign in to continue </string>
    <string name="hint_username">Username</string>
    <string name="sign_up_title">Sign Up</string>
    <string name="create_acc">Create a new account</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
</resources>