<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <TextView
        android:id="@+id/sign_up_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="60dp"
        android:text="@string/sign_up_title"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/sign_up_create_a_new_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/create_acc"
        android:layout_below="@+id/sign_up_title"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/sign_up_full_name"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/custom_edit_text"
        android:layout_below="@+id/sign_up_create_a_new_account"
        android:hint="@string/full_name"
        android:padding="7dp" />
    <EditText
        android:id="@+id/sign_up_email"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/custom_edit_text"
        android:hint="@string/email"
        android:padding="7dp"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/sign_up_full_name"
        />
    <EditText
        android:id="@+id/sign_up_password"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:hint="Password"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/custom_edit_text"
        android:padding="7dp"
        android:inputType="textPassword"
        android:layout_below="@+id/sign_up_email"
        />

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/sign_up_password"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/custom_bg_btn"
        android:padding="10dp"
        android:text="@string/sign_up_title"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_dont_have_an_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_sign_up"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="20dp"
        android:text="Already have an account?" />

    <TextView
        android:id="@+id/tv_sign_up_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_sign_up"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_toLeftOf="@+id/tv_dont_have_an_account"
        android:layout_toEndOf="@+id/tv_dont_have_an_account"
        android:text="Sign In"
        android:textColor="#6153C3"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>