<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="60dp"
        android:text="@string/welcome"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="100dp"
        android:text="@string/sign_in_to_cont" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="150dp"
        android:hint="@string/hint_username"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/custom_edit_text"
        android:padding="7dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="230dp"
        android:hint="Password"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/custom_edit_text"
        android:padding="7dp"
        android:inputType="textPassword"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="300dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/custom_bg_btn"
        android:padding="10dp"
        android:text="Get Start"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/tv_dont_have_an_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="400dp"
        android:text="Dont have an account?" />
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="400dp"
    android:text="Sign Up"
    android:textColor="#6153C3"
    android:textSize="18sp"
    android:textStyle="bold"
    android:layout_marginLeft="20dp"
    android:layout_toEndOf="@+id/tv_dont_have_an_account"
    android:layout_toLeftOf="@+id/tv_dont_have_an_account" />




</RelativeLayout>